--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -20,6 +20,7 @@
 <ul id="menu">
     <li><a href="/subcommission-timescale-calibration/">Home</a></li>
     <li><a href="officers">Officers</a></li>
+    <li><a href="members">Members</a></li>
     <!--
     <li><a href="meetings">Forthcoming Meetings</a></li>
     <li><a href="correlations">Cambrian Correlation Schemes</a></li>
