--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -173,6 +173,8 @@
         <div id="banner">
             {% if page.url == '/cyclostratigraphy' %}
             <img src="images/banner-02.png" />
+            {% if page.url == '/members' %}
+            <img src="images/banner-03.png" />
             {% else %}
             <img src="images/banner.png" />
             {% endif %}
