--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -173,12 +173,15 @@
         <div id="banner">
             {% if page.url == '/cyclostratigraphy' %}
             <img src="images/banner-02.png" />
+            {% else %}
+            <img src="images/banner.png" />
+            {% endif %}
+        </div>
             {% if page.url == '/members' %}
             <img src="images/banner-03.png" />
             {% else %}
             <img src="images/banner.png" />
             {% endif %}
-        </div>
         <div id="body-grid">
             <div id="sidebar" style="grid-column: 1;">
                 {% include menu.html %}
