--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -177,6 +177,7 @@
             <img src="images/banner.png" />
             {% endif %}
         </div>
+        <div id="banner">
             {% if page.url == '/members' %}
             <img src="images/banner-03.png" />
             {% else %}
