--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -183,6 +183,7 @@
             {% else %}
             <img src="images/banner.png" />
             {% endif %}
+        </div>
         <div id="body-grid">
             <div id="sidebar" style="grid-column: 1;">
                 {% include menu.html %}
