--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -173,11 +173,13 @@
         <div id="banner">
             {% if page.url == '/cyclostratigraphy' %}
             <img src="images/banner-02.png" />
+            {% else %}
+            <img src="images/banner.png" />
+            {% endif %}
             {% if page.url == '/members' %}
             <img src="images/banner-03.png" />
             {% else %}
             <img src="images/banner.png" />
-            {% endif %}
             {% endif %}
         </div>
         <div id="body-grid">
