--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -171,11 +171,13 @@
             </div>
         </div>
         <div id="banner">
-            {% if page.url == '/cyclostratigraphy' %}
-            <img src="images/banner-02.png" />
             {% if page.url == '/members' %}
             <img src="images/banner-03.png" />
             {% endif %}
+        </div>
+        <div id="banner">
+            {% if page.url == '/cyclostratigraphy' %}
+            <img src="images/banner-02.png" />
             {% else %}
             <img src="images/banner.png" />
             {% endif %}
