--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -172,14 +172,11 @@
         </div>
         <div id="banner">
             {% if page.url == '/members' %}
-            <img src="images/banner-03.png" />
-            {% endif %}
-        </div>
-        <div id="banner">
-            {% if page.url == '/cyclostratigraphy' %}
-            <img src="images/banner-02.png" />
+            <img src="images/banner-03-l.png" />            
+            {% elsif page.url == '/cyclostratigraphy' %}
+            <img src="images/banner-02-l.png" />
             {% else %}
-            <img src="images/banner.png" />
+            <img src="images/banner-01-l.png" />
             {% endif %}
         </div>
         <div id="body-grid">
