--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -172,13 +172,13 @@
         </div>
         <div id="banner">
             {% if page.url == '/officers' %}
-            <img src="images/banner-05.png" /> 
+            <img src="images/banner-01.png" /> 
             {% elsif page.url == '/members' %}
             <img src="images/banner-03.png" />            
             {% elsif page.url == '/cyclostratigraphy' %}
             <img src="images/banner-02.png" />
             {% else %}
-            <img src="images/banner-01.png" />
+            <img src="images/banner-05c.png" />
             {% endif %}
         </div>
         <div id="body-grid">
