--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -172,9 +172,9 @@
         </div>
         <div id="banner">
             {% if page.url == '/officers' %}
-            <img src="images/banner-01.png" /> 
+            <img src="images/banner-05c.png" /> 
             {% elsif page.url == '/members' %}
-            <img src="images/banner-03.png" />            
+            <img src="images/banner-04c.png" />            
             {% elsif page.url == '/cyclostratigraphy' %}
             <img src="images/banner-02.png" />
             {% else %}
