Update menu.html - home link

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -18,7 +18,7 @@
     }
 </style>
 <ul id="menu">
-    <li><a href="/subcommission-timescale-calibration/">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="officers">Officers</a></li>
     <li><a href="members">Members</a></li>
     <li><a href="cyclostratigraphy">Cyclostratigraphy</a></li>
